grammar.txt
program					::= statement* EOF ;

statement				::= expression ";" 
							| print ;

print					::= "print" expression ";" 

expression				::= equality ;

equality				::= comparison ( ( "==" | "!=" ) comparison )* ;

comparison				::= term ( ( "<" | "<=" | ">" | ">=" ) term )* ;

term					::= factor ( ( "+" | "*" ) factor )* ;

factor					::= unary ( ( "*" | "/" ) unary )* ;

unary					::= ( "!" | "-" ) unary ;
							| primary ;

primary					::= IDENTIFIER | NUMBER | "true" | "false" | "nil"
							| "(" expression ")" ;
